--- a/Contact Me.html
+++ b/Contact Me.html
@@ -111,7 +111,7 @@
                 </tr>
                 <tr>
                     <th scope="row">Email:</th>
-                    <td>dafni.m92@gamil.com</td>
+                    <td>dafni.m92@gmail.com</td>
                 </tr>
                 <tr>
                     <th scope="row">Service Hours</th>
@@ -139,7 +139,7 @@
     <!-- Footer -->
     <footer class="py-5 bodyClass">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
         </div>
         <!-- /.container -->
     </footer>
