--- a/Projects.html
+++ b/Projects.html
@@ -55,7 +55,7 @@
                 <a href="https://www.instagram.com/daphne.anna.booth/">
                     <i class="fab fa-instagram fa-2x"></i>
                 </a>
-                
+
                 <a href="">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
@@ -81,86 +81,80 @@
     <!--Basic Content-->
 
     <!--1st row of card-->
+    <!--1st Card-->
     <div class="card-deck">
-
         <div class="card">
-            <a href="SmartWare\Readme.html">
-                <img src="https://nikos-kun.github.io/SmartWare\img\2.JPG" class="card-img-top border-bottom" alt="SmartWare's menu app picture">
+            <a href="img\Projects\converse.jpg">
+                <img src="img\Projects\converse.jpg" class="card-img-top border-bottom" alt="">
+
                 <div class="card-body">
-                    <h5 class="card-title text-dark">SmartWare</h5>
-                    <p class="card-text text-dark">This is a simple app, made with AngularJS and Bootstrap.</p>
+                    <h5 class="card-title text-dark">Converse</h5>
+                    <p class="card-text text-dark">Say a few words...</p>
+                </div>
             </a>
         </div>
-        <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
+
+        <!--2nd Card-->
+        <div class="card">
+            <a href="img\Projects\dada1.jpg">
+                <img src="img\Projects\dada1.jpg" class="card-img-top border-bottom" alt="">
+                <div class="card-body">
+                    <h5 class="card-title text-dark">Dada</h5>
+                    <p class="card-text text-dark">Say a few words...</p>
+                </div>
+            </a>
+        </div>
+
+
+        <!--3rd Card-->
+        <div class="card">
+            <a href="img\Projects\DBA4.jpg">
+                <img src="img\Projects\DBA4.jpg" class="card-img-top border-bottom" alt="">
+                <div class="card-body">
+                    <h5 class="card-title text-dark">DBA4</h5>
+                    <p class="card-text text-dark">Say a few words...</p>
+                </div>
+            </a>
         </div>
     </div>
 
-    <div class="card">
-        <img src="img\Empty.jpg" class="card-img-top border-bottom" alt="...">
-        <div class="card-body">
-            <h5 class="card-title text-dark">Card title</h5>
-            <p class="card-text text-dark">This card has supporting text below as a natural lead-in to additional
-                content.
-            </p>
-        </div>
-        <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-    </div>
-    <div class="card">
-        <img src="img\Empty.jpg" class="card-img-top border-bottom" alt="...">
-        <div class="card-body">
-            <h5 class="card-title text-dark">Card title</h5>
-            <p class="card-text text-dark">This is a wider card with supporting text below as a natural lead-in to
-                additional content. This card has even longer content than the first to show that equal height
-                action.</p>
-        </div>
-        <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-    </div>
-
-    </div>
+    <hr>
 
     <!--2nd row of card-->
-    <div class="card-deck">
+       <!--1st Card-->
+       <div class="card-deck">
         <div class="card">
-            <img src="img\Empty.jpg" class="card-img-top border-bottom" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-dark">Card title</h5>
-                <p class="card-text text-dark">This is a wider card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img\Empty.jpg" class="card-img-top border-bottom" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-dark">Card title</h5>
-                <p class="card-text text-dark">This card has supporting text below as a natural lead-in to additional
-                    content.
-                </p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img\Empty.jpg" class="card-img-top border-bottom" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-dark">Card title</h5>
-                <p class="card-text text-dark">This is a wider card with supporting text below as a natural lead-in to
-                    additional content. This card has even longer content than the first to show that equal height
-                    action.</p>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
+            <a href="img\Projects\WEED LAND2.jpg">
+                <img src="img\Projects\WEED LAND2.jpg" class="card-img-top border-bottom" alt="">
+                <div class="card-body">
+                    <h5 class="card-title text-dark">Title</h5>
+                    <p class="card-text text-dark">Say a few words...</p>
+                </div>
+            </a>
         </div>
 
+        <!--2nd Card-->
+        <div class="card">
+            <a href="img\Projects\amna.jpg">
+                <img src="img\Projects\amna.jpg" class="card-img-top border-bottom" alt="">
+                <div class="card-body">
+                    <h5 class="card-title text-dark">Title</h5>
+                    <p class="card-text text-dark">Say a few words...</p>
+                </div>
+            </a>
+        </div>
+
+
+        <!--3rd Card-->
+        <div class="card">
+            <a href="img\Projects\ampe1.jpg">
+                <img src="img\Projects\ampe1.jpg" class="card-img-top border-bottom" alt="">
+                <div class="card-body">
+                    <h5 class="card-title text-dark">Title</h5>
+                    <p class="card-text text-dark">Say a few words...</p>
+                </div>
+            </a>
+        </div>
     </div>
 
     <hr>
@@ -174,13 +168,19 @@
             </a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="#">1</a>
+            <a class="page-link" href="Projects.html">1</a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="#">2</a>
+            <a class="page-link" href="Projects_2.html">2</a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="#">3</a>
+            <a class="page-link" href="Projects_3.html">3</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="Projects_4.html">4</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="Projects_5.html">5</a>
         </li>
         <li class="page-item">
             <a class="page-link" href="#" aria-label="Next">
@@ -193,7 +193,7 @@
     <!-- Footer -->
     <footer class="py-5 bodyClass">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
         </div>
         <!-- /.container -->
     </footer>
