--- a/Home.html
+++ b/Home.html
@@ -84,7 +84,7 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active text-center">
-                <img src="img\Project1.1.jpg" alt="First slide">
+                <img src="img\Untitled.bmp" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First Project</h5>
                     <p>Description of First Project</p>
@@ -93,7 +93,7 @@
 
 
             <div class="carousel-item text-center">
-                <img src="img\Project1.2.jpg" alt="Second slide">
+                <img src="img\Untitled.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second Project</h5>
                     <p>Description of Second Project</p>
@@ -102,7 +102,7 @@
 
 
             <div class="carousel-item text-center">
-                <img src="img\Project1.3.jpg" alt="Third slide">
+                <img src="img\Untitled.png" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third Project</h5>
                     <p>Description of Third Project</p>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="carousel-item text-center">
-                <img src="img\Project1.4.jpg" alt="Fourth slide">
+                <img src="img\Untitled.png" alt="Fourth slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Fourth Project</h5>
                     <p>Description of Fourth Project</p>
@@ -142,8 +142,8 @@
     <!-- Project One -->
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <a href="img\Projects_2\hand drawings.jpg">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="img\Projects_2\hand drawings.jpg" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -159,8 +159,8 @@
     <!-- Project Two -->
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <a href="img\Projects_3\meteora.jpg">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="img\Projects_3\meteora.jpg" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -176,8 +176,8 @@
     <!-- Project Three -->
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <a href="img\Projects_3\faros.jpg">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="img\Projects_3\faros.jpg" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -194,8 +194,8 @@
     <div class="row">
 
         <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <a href="img\Projects_3\sunset.jpg">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="img\Projects_3\sunset.jpg" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -208,35 +208,11 @@
 
     <hr>
 
-    <!-- Pagination -->
-    <ul class="pagination justify-content-center">
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-            </a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">1</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-            </a>
-        </li>
-    </ul>
 
     <!-- Footer -->
     <footer class="py-5 bodyClass">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
         </div>
         <!-- /.container -->
     </footer>
