--- a/Contact Me.html
+++ b/Contact Me.html
@@ -44,16 +44,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Home.html">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Projects</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item disabled" href="#">Project 1</a>
-                            <a class="dropdown-item disabled" href="#">Project 2</a>
-                            <a class="dropdown-item disabled" href="#">Project 3</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="Projects.html">All projects</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="About Me.html">About Me</a>
