--- a/Home.html
+++ b/Home.html
@@ -29,16 +29,8 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="Home.html">Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">Projects</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item disabled" href="#">Project 1</a>
-                        <a class="dropdown-item disabled" href="#">Project 2</a>
-                        <a class="dropdown-item disabled" href="#">Project 3</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="Projects.html">All projects</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="Projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="About Me.html">About Me</a>
@@ -55,7 +47,7 @@
                 <a href="https://www.instagram.com/daphne.anna.booth/">
                     <i class="fab fa-instagram fa-2x"></i>
                 </a>
-                
+
                 <a href="">
                     <i class="fab fa-linkedin fa-2x"></i>
                 </a>
@@ -148,7 +140,8 @@
         </div>
         <div class="col-md-5">
             <h3>Project One</h3>
-            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content
+                is a little bit longer.</p>
             <a class="btn btn-primary" href="#">View Project</a>
         </div>
     </div>
@@ -165,7 +158,8 @@
         </div>
         <div class="col-md-5">
             <h3>Project Two</h3>
-            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content
+                is a little bit longer.</p>
             <a class="btn btn-primary" href="#">View Project</a>
         </div>
     </div>
@@ -182,7 +176,8 @@
         </div>
         <div class="col-md-5">
             <h3>Project Three</h3>
-            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content
+                is a little bit longer.</p>
             <a class="btn btn-primary" href="#">View Project</a>
         </div>
     </div>
@@ -200,7 +195,8 @@
         </div>
         <div class="col-md-5">
             <h3>Project Four</h3>
-            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content
+                is a little bit longer.</p>
             <a class="btn btn-primary" href="#">View Project</a>
         </div>
     </div>
