--- a/Projects_3.html
+++ b/Projects_3.html
@@ -77,7 +77,7 @@
     <div class="card-deck">
         <div class="card">
             <a href="img\Projects_3\_DSC0142.JPG">
-                <img src="img\Projects_3\_DSC0142.JPG" class="card-img-top border-bottom" alt="">
+                <img src="img\Projects_3\_DSC0142.JPG" class="card-img-top border-bottom" alt="_DSC0142.JPG">
 
                 <div class="card-body">
                     <h5 class="card-title text-dark">Title</h5>
@@ -89,7 +89,7 @@
         <!--2nd Card-->
         <div class="card">
             <a href="img\Projects_3\_DSC0157.JPG">
-                <img src="img\Projects_3\_DSC0157.JPG" class="card-img-top border-bottom" alt="">
+                <img src="img\Projects_3\_DSC0157.JPG" class="card-img-top border-bottom" alt="_DSC0157.JPG">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Title</h5>
                     <p class="card-text text-dark">Say a few words...</p>
@@ -101,7 +101,7 @@
         <!--3rd Card-->
         <div class="card">
             <a href="img\Projects_3\_DSC0394.JPG">
-                <img src="img\Projects_3\_DSC0394.JPG" class="card-img-top border-bottom" alt="">
+                <img src="img\Projects_3\_DSC0394.JPG" class="card-img-top border-bottom" alt="_DSC0394.JPG">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Title</h5>
                     <p class="card-text text-dark">Say a few words...</p>
