--- a/Projects_3.html
+++ b/Projects_3.html
@@ -76,8 +76,8 @@
     <!--1st Card-->
     <div class="card-deck">
         <div class="card">
-            <a href="img\Projects_3\_DSC0142.JPG">
-                <img src="img\Projects_3\_DSC0142.JPG" class="card-img-top border-bottom" alt="_DSC0142.JPG">
+            <a href="img\Projects_3\DSC0142.JPG">
+                <img src="img\Projects_3\DSC0142.JPG" class="card-img-top border-bottom" alt="DSC0142.JPG">
 
                 <div class="card-body">
                     <h5 class="card-title text-dark">Title</h5>
@@ -88,8 +88,8 @@
 
         <!--2nd Card-->
         <div class="card">
-            <a href="img\Projects_3\_DSC0157.JPG">
-                <img src="img\Projects_3\_DSC0157.JPG" class="card-img-top border-bottom" alt="_DSC0157.JPG">
+            <a href="img\Projects_3\DSC0157.JPG">
+                <img src="img\Projects_3\DSC0157.JPG" class="card-img-top border-bottom" alt="DSC0157.JPG">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Title</h5>
                     <p class="card-text text-dark">Say a few words...</p>
@@ -100,8 +100,8 @@
 
         <!--3rd Card-->
         <div class="card">
-            <a href="img\Projects_3\_DSC0394.JPG">
-                <img src="img\Projects_3\_DSC0394.JPG" class="card-img-top border-bottom" alt="_DSC0394.JPG">
+            <a href="img\Projects_3\DSC0394.JPG">
+                <img src="img\Projects_3\DSC0394.JPG" class="card-img-top border-bottom" alt="DSC0394.JPG">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Title</h5>
                     <p class="card-text text-dark">Say a few words...</p>
